# contracts

./: .dapprc  .env.example  .gas-snapshot  .gas-snapshot-fork-eth  .gas-snapshot-fork-polygon  .gas-snapshot-fork-ropsten  .gas-snapshot-no-fork  .gitignore  .gitmodules  .prettierignore  .solhint.json  .solhintignore  Dockerfile  LICENSE  Makefile  README.md  calc-nsloc.sh  foundry.toml  gencov.sh  hardhat.config.ts  package-lock.json  package.json  remappings.txt  skaffold.yaml  slither.config.json  tsconfig.json
.github/: CODEOWNERS
.husky/: pre-commit
backend/: .gitignore  Dockerfile  Makefile  Pipfile  README.md  main.py  pyproject.toml
backend/alembic/versions/: 84321c07a928_create_table_asset_metadata.py
backend/apis/alpine_web_api/: Pipfile  Readme.md  asset_info.py  constant.py  main.py  transactions.py  user_info.py  utils.py  vault_info.py
backend/data-collection-pipeline/scrapers/: coin_price_scraper.py  coingecko_scraper.py
backend/db/: alembic.ini
backend/routes/: asset_info.py  transactions.py  user_portfolio.py  user_trade.py
backend/scripts/: main.py
backend/test/: fastapi_test.py  yahoo_finance_scraper_test.py
backend/test/mock_files/: all_asset_metadata.csv  asset_price.csv  daily_metrics.csv  user_balance.csv
backend/utils/: utils.py
chainlink/: Dockerfile  README.md  adapter.py  app.py  deposit-token-web-job-mumbai.json  pyproject.toml
chainlink/contracts/: kovan-client.sol  mumbai-client.sol
chainlink/jobs/: deposit-token-job-kovan.json  deposit-token-job-mumbai.json
chainlink/tests/: test_adapter.py
data-pipeline/: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  alembic.ini  pyproject.toml  run.sh
data-pipeline/alembic/: env.py
data-pipeline/alembic/versions/: 41b79613f519_create_table_asset_price.py  84321c07a928_create_table_asset_metadata.py  c7099efc574c_create_table_asset_daily_metrics.py
data-pipeline/data-preprocessing-pipeline/: main.py  preprocessing.py  utils.py
data-pipeline/data_collection_pipeline/: data_pipeline.py
data-pipeline/data_preprocessing_pipeline/: main.py  preprocessing.py  utils.py
data-pipeline/mv0_user_balance_table_updater/: mv0_user_balance_table_updater.py
data-pipeline/portfolio-creation-pipeline/: constant.py  generate_returns.py  portfolio_latest.json
data-pipeline/portfolio_creation_pipeline/: constant.py  generate_returns.py
(+1630 files in other folders)
