[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Basic API Server"
authors = ["larryob <tosin@multiplyr.ai>"]
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pandas = "^1.3.3"
SQLAlchemy = "^1.4.25"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[tool.poetry.scripts]
server = "apis.alpine_web_api.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
