[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = "data scrapping and preprocessing pipeline"
authors = ["Adib Hasan <adib@multiplyr.ai>"]

[tool.poetry.dependencies]
python = "==3.8"
aiobotocore = "==1.3.3"
aiohttp = "==3.7.4.post0"
aioitertools = "==0.8.0"
async-timeout = "==3.0.1"
attrs = "==21.2.0"
boto3 = "==1.17.99"
botocore = "==1.20.106"
certifi = "==2021.5.30"
chardet = "==4.0.0"
charset-normalizer = "==2.0.4"
Cython = "==0.29.23"
fsspec = "==2021.7.0"
greenlet = "==1.1.1"
gql = "==3.0.0a6"
idna = "==2.10"
importlib-metadata = "==4.6.3"
jmespath = "==0.10.0"
joblib = "==1.0.1"
lxml = "==4.6.3"
multidict = "==5.1.0"
multitasking = "==0.0.9"
numpy = "==1.21.2"
pandas = "==1.3.2"
pycoingecko = "==2.2.0"
python-dateutil = "==2.8.2"
pytz = "==2021.1"
requests = "==2.26.0"
s3fs = "==2021.7.0"
s3transfer = "==0.4.2"
scikit-learn = "==0.24.2"
six = "==1.16.0"
SQLAlchemy = "==1.4.22"
threadpoolctl = "==2.2.0"
typing-extensions = "==3.10.0.0"
urllib3 = "==1.26.6"
wrapt = "==1.12.1"
yarl = "==1.6.3"
yfinance = "==0.1.59"
zipp = "==3.5.0"
psycopg2-binary = "==2.8.6"

[tool.poetry.dev-dependencies]
pytest = "==6.2.4"
scipy = "==1.7.0"
coverage = "==5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
